# AStar

./: CMakeLists.txt  README.md  vcpkg.json
src/: algo.cpp  algo.hpp  astar.cpp  astar.hpp  buffer.cpp  buffer.hpp  global.hpp  globals.hpp  project.cpp  project.hpp  renderer.cpp  renderer.hpp  shader.cpp  shader.hpp  window.cpp  window.hpp
